@@ -18,13 +18,13 @@ AUX gitlab.conf 27 SHA256 cd9be088bbb67a5400407fc6f63c061eb224f16748b7d0812ff2c1
 DIST gitlab-ce-9.0.12.tar.gz 26367049 SHA256 2cd78b2686bb7c35af4b3684b7e5932f37c93e68da3de3e925e98f52f29d13b3 SHA512 07329b7a3cb083b6993e1e405059262260476912438bf5d3304461e1d5f2dfa9c433b761fe84a1627468ba76f2a9d22b336af997eb8a6807ea3ee20cea85ae4b WHIRLPOOL b9554526572b7c190af9a9b6dcdcb8d604cfdeed57795beda7b909dc8ddec0243cbca1793765294fc9b98f4c60fc85e8a3abddebc08638dc24d254735a1dac59
 DIST gitlab-ce-9.1.9.tar.gz 30516632 SHA256 52436dfb7d086cd449a975d63a973dc3a58f677031ae5e7653ad27888544d86c SHA512 2c47720cd05d94f31d8b9d665ed7ef1c66fbc9ffb30967bf12e9db20b1607043f488e5cfacc53abca3be7e846b0d661578b0768d737a257ef4bf3cc35883c23a WHIRLPOOL acafd9a98e253d2318e6c53148bff3253be3bf98dd836562f0897bc91a34724b4f2e583e90e590e21e34b3811229a5119a71e0d02ada1d0745c8ad9c81288190
 DIST gitlab-ce-9.2.9.tar.gz 30992595 SHA256 ce6fc7d908bc5348734c0519c3d976f29fac8b9e249a49b82bc920aea02629da SHA512 8f9bcfe4563aa6b84a01b295530b584b96745a10528c0e7ab0b2f894474a1a28a082bd1996bff0e38b36f77741e7624105d573278839aa8b976e4914d7b775ab WHIRLPOOL 7aaff53923772b725f80ad3f09ccf2f903bffc31c9536a5419a68692f19402dffec4a37cfe8d355f382641712d18064b642e82705210ff5c8421eecf71379ef8
-DIST gitlab-ce-9.3.0_rc2.tar.gz 31567867 SHA256 fbd93af8281b2460a9600a84b24b007e4557da49f8d118387724c8166236220c SHA512 942e3e1ec856b0ff3dedcfcb7b8cdee51e7d44779024acaa69ce7d415d08bb1ee785bcd265d1f9f08790c8e9508779b7f9cc8a40acf417cbc0e94f3a98f1fb64 WHIRLPOOL 1f210495ac3632f88c663ae9dd936bea5e556012a5b5dfe598425046f845d0467c17b92abd24924dc720c3877f8b6ef65e6b551ad9b2c3486dc27eee430a6a0e
 DIST gitlab-ce-9.3.9.tar.gz 31766776 SHA256 1ea93e0031ce57e1fcc4bab4809a989376717b2d81b37bd9cd70c0d51f2e042e SHA512 8cb5ad4b03a9ae266150f84305953886e877241e846cd0fc84b619c0137b30ed1cd7aa5017c5e496e28e30a866a5c8d13e3f4ba6b4cd1449becf0a2290bc61b9 WHIRLPOOL 58dc164054a420fb134dc9a837982aa83428199da5d6cd9ba15a000c42ddbe8936bd2420d7d0a2272751f33885f65d005bd3cb306cf4bcb6e3dddb58b8204f06
+DIST gitlab-ce-9.4.0_rc6.tar.gz 32810524 SHA256 4cd8ae890bbe2b90047078c6d61fd29c8c62e8aa0059d97ca14db81b68ea64f2 SHA512 b8aeaa3f017b47c3455885c57fc21da8fc393ce6258de6813f0c7104f7dc725ffd3800c22d480ed19aa553c7d1040a4006dbd923cb6a1f3cdd685b17ee21afc0 WHIRLPOOL dd583d05f6937612e9a34980c558030bed266f2a0f50a2d9977c23a4cb8fcbfcfc71a3157c846250a02091688333c5b76ccdeec2a9f3e5a23af715caa7d58f05
 EBUILD gitlab-ce-9.0.12.ebuild 13079 SHA256 8d0d7ed4d3bc3049d45c86743742354827f811bdeb81cb5370713d115b5f2453 SHA512 9420cd9d0138d23a96e15d4ce0f21d265804eb78fc4724708f20f4c153cbc0942940a0bc646492eb143fd2f7870b9b0c767d51974bf5d070be37431e87135070 WHIRLPOOL 9a69b3c796dfcd5845583b217375ab354b5fbf707261b3407d4bc215ab91e646539759986a0b321409513c4c19ed4994054677fe10340fcb50706d72e78e3e49
 EBUILD gitlab-ce-9.1.9.ebuild 13235 SHA256 b97e426661b11c52432bd4a47faa7e96867fc09cf7c8f25c227c96d3e3a5102e SHA512 5fe79ff6cbd48915fa8906cb41b2d1d29a908339943c24cd34870d8368c589990fce2c3f7844e0898b952558a85f527d5e5f04cb15db3f8afd310014610dda39 WHIRLPOOL 1fae0a60762a707144911101bca134fcc5da990b42b0afd9d0ac439557885f7548c0088852a5492706355d80b3c57166d591b5e195d43676d10f0ecf5273ad8a
 EBUILD gitlab-ce-9.2.9.ebuild 12980 SHA256 a3722674324dbb418d379f326865eb03125555d631f34079193b12ba77878d8a SHA512 53094a4ccd6635df51fb45618e6eb9f2904e0939cb40685135a9165a45712112d0d5d527da6626e9096234e64ef0620dc774e58515ab48baa7754163736cdeeb WHIRLPOOL eca9905ee808983b1a72f8907f5d969f2ed273bd707e5948edb2192fa2603d4f0aeafedb24339f00a9daa4eb8e5dadfbe2ba2c64a1b97f50abe9232ae8d37953
-EBUILD gitlab-ce-9.3.0_rc2.ebuild 12829 SHA256 a873ba63a4e3108bf321949d4f68267b6168720daee6e581b6964d8574fdcbe9 SHA512 cd3f9215109e91bdcc52704845de95fa45a6345222b0ea53453257c44424b38d0b2d087030b23953d22236f2b9f76dcf0eb7c2f918d61cc9f0a4710f99e9c71b WHIRLPOOL fa340d85a5ea8a16f4bfe6cf1e8379617115d983e6a0346cd09612d86bb09c802286b65e419bd6cdd7c2ab5f4b9baba62584efd30da6a96473c1130b4ab4d27c
 EBUILD gitlab-ce-9.3.9.ebuild 13639 SHA256 039ba276fb5c3ba71c04d830b90781457ae1e8ae855f1454b3309b8e3c477bc1 SHA512 ab7add79547b10908253460a27e1a733128323e304b64e0a1291ab69d1ed2daac3296c5dc4996deae6e5c72d6a62c88f825aa1485b1086c29c221397c3871968 WHIRLPOOL ec2d63679e376e1bffd3731b401fbac8f3773352708629d4c4bd092ba4a1c63ae4be03bf75038422e5be14e3836bda461dddbaa7c49b4e5946a81679b554302d
-EBUILD gitlab-ce-9999.ebuild 13567 SHA256 f1d12d56c0c52aa3f5f428a270ae4d6bf63e3ff2789a5dbc2ebc452fcb5273af SHA512 08eabbc8080fdaa34b93d68f7a0bca2e2cf6936bc3023917bc51878ebd1e4d0e3d04399915f1190987956ea934260c05b49aff97e68c6fefa3fc1f886f3481de WHIRLPOOL b355d5c4710e708b03e14dd83c5f6b76a89bc9899f2c73e14033595bf95502f3ac601fe1a2e1b367bcc133ec3edea72996b7f621687d92e3012137dd8bd269a0
-MISC ChangeLog 21631 SHA256 b6e574a2529776a3874b1682480ffec15aad57acc4230c5a8b4aa4ab30fb29a2 SHA512 c8f8588f3290115731e431c20b33e50b8250956eff55239d2000c3192a8c00f92cef45ac35d555d832b13254c95cc205d9dc41ba1442667c69f2b9854d208b71 WHIRLPOOL f97c7da48d3fcf6961f9a8f448d32bd6949011fc13a346d1878ae2ee847aad1d1537076151cadf89121e39103cb3cc5d9e64c0d59c6b691065d31facd235645f
+EBUILD gitlab-ce-9.4.0_rc6.ebuild 12843 SHA256 8deeafb5058635b27a13d3867e7b3ef3eccd757cfd7b7d9b445669fe9a66da04 SHA512 d07da6f5ae61996430d890eabc0c58413fc678923698b6dad981cad6a956c6201ee2848f8feac306ed850904ef965cc7cb29748b3a0b54eebef13c168a69e74b WHIRLPOOL 03a87ac150ae8214c4ac2c870a560ed1ebba9866774cb9d07f8428205d7e5f6ff9e6af3f89e2d90266784847c0883b35db3bec517569074b918d3e941919881a
+EBUILD gitlab-ce-9999.ebuild 13581 SHA256 86cda78324957f3078a54ce9b014bef26e55dc57a8b2b0c438f2ab32aa9e4160 SHA512 7479938cc287aa6a29689817a6759b652b27aa439cba4828d5e0538322fe478a222e27e55a1f49f30bea131de4fce7938d015709fba335c4b0eb534e25baa6a6 WHIRLPOOL 9c8bb98f93cfe2a552772e797715a18ca794b40ad8b7bb5830e395a8392fbd458ad09e5d3b9876e5e2746a2be1b8b0a6a4a27c06c55c076a539ab831f560ac85
+MISC ChangeLog 21858 SHA256 8e02c6d4ec28c4d86e4973fd6833c1c1cd92bd583b77a041c36766a982838dac SHA512 26c5d8f92f42c693f5031ee3bfc44677a02a6fde24f61715d378166702cf3ca63db6685f85da76f9201d2ae2ef761ab003c6f7077ec1776dd0638b681f7c808e WHIRLPOOL 8ff620187fa7892d68e63fa4729b39028f251e0f0a11c2cc80357e3f2c696475cc393978b9845ad722bc4f3e437c419bfa973a76fb7f271af3c05b8258a2245e
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
